# AI-Company-Monitor

./: .gitignore  README.md  ai_sub_monitor_prd.md  ai_subscription_background.md  pyproject.toml  subscriber_mix_model.xlsx  subscription_economics.xlsx
config/: keywords.yaml  sources.yaml
src/ai_sub_monitor/: __init__.py  cli.py  config.py  db.py
src/ai_sub_monitor/analyzers/: __init__.py  diff.py  sentiment.py
src/ai_sub_monitor/collectors/: __init__.py  docs.py  github.py  pricing.py  reddit.py
src/ai_sub_monitor/reporters/: weekly.py
src/ai_sub_monitor/reporters/templates/: weekly_report.md.j2
src/ai_sub_monitor/utils/: http.py  models.py
